--- a/doc/LetteraDiPresentazione/LetteraDiPresentazione.tex
+++ b/doc/LetteraDiPresentazione/LetteraDiPresentazione.tex
@@ -62,25 +62,27 @@ In particolare sono stati aggiornati alcuni documenti in seguito all'esito della
 Per la Revisione di Accettazione si consegna il seguente materiale: 
 \subsection{Documenti esterni}
 \begin{list}{-}{}
-\item Definizione di prodotto (DefinizioneDiProdotto2.0.pdf)
 \item Lettera di presentazione (LetteraDiPresentazione.pdf)
 \item Manuale utente (ManualeUtente2.0.pdf)
-\item Piano di progetto (PianoDiProgetto4.0.pdf)
+\item Consuntivo finale (ConsuntivoFinale1.0.pdf)
+\item Definizione di prodotto (DefinizioneDiProdotto2.0.pdf)
 \item Piano di qualifica (PianoDiQualifica4.0.pdf)
 \end{list}
 \subsection{Codice sorgente}
 \begin{list}{-}{}
-\item Codice sorgente e test: directory AJAXDRAW.
+\item Codice sorgente: directory \textit{sorgenti}.
+\item Test client: \textit{sorgenti/src/test}.
+\item Test server: \textit{sorgenti/server/serverPack/test}.
 \end{list}
 \subsection{Binari}
 \begin{list}{-}{}
-\item File \textit{war} per GNU/Linux: linux/AJAXDRAW.war
-\item File \textit{war} per Windows: windows/AJAXDRAW.war
+\item File \textit{war} per GNU/Linux: \textit{AJAXDRAW/linux/AJAXDRAW.war}.
+\item File \textit{war} per Windows: \textit{AJAXDRAW/windows/AJAXDRAW.war}.
 \end{list}
 \subsection{Dipendenze}
 \begin{list}{-}{}
-\item Apache Tomcat: dipendenze/apache-tomcat-6.0.18.tar.gz
-\item Apache Tomcat, programma di installazione per Windows: dipendenze/apache-tomcat-6.0.18.exe
+\item Apache Tomcat: \textit{dipendenze/apache-tomcat-6.0.18.tar.gz}.
+\item Apache Tomcat, programma di installazione per Windows: \textit{dipendenze/apache-tomcat-6.0.18.exe}.
 \end{list}
 
 
