corretto numero figura load

--- a/doc/PianoDiProgetto/ConsuntivoFinale.tex
+++ b/doc/PianoDiProgetto/ConsuntivoFinale.tex
@@ -60,7 +60,7 @@ Versione: \insertversion
 
 %\setlength{\parindent}{18pt} %settato indentazione di default 
 \section*{\LARGE Sommario:}
-Il presente documento descrive l'analisi dei costi e delle risorse effettuata dall'azienda WebShape per lo sviluppo del Capitolato C04.
+Il presente documento confronta i consuntivi con i preventivi dei costi e delle risorse utilizzate dall'azienda WebShape per lo sviluppo del Capitolato C04.
 
  %SEZIONE SOMMARIO
 \indent \indent
@@ -114,7 +114,7 @@ Il presente documento descrive l'analisi dei costi e delle risorse effettuata da
 		\label{tabverifica}
 	\end{center}
 \end{table}	
-	
+	\newpage
 \section*{\LARGE Approvazione:}
 \begin{table}[!h]
 	\begin{center}
@@ -138,6 +138,7 @@ Il presente documento descrive l'analisi dei costi e delle risorse effettuata da
 	\end{center}
 \end{table}
 
+
 \textbf{}
 \section*{\LARGE Lista di Distribuzione:}
 
@@ -146,7 +147,7 @@ Il presente documento descrive l'analisi dei costi e delle risorse effettuata da
 		\item I committenti Conte Renato e Vardanega Tullio in rappresentanza \\  dell'azienda proponente Zucchetti SPA
 	\end{elenconumerato}
 
-\newpage
+
 
 
 \section*{\Large Registro delle Modifiche:}
@@ -184,7 +185,7 @@ Il presente documento descrive l'analisi dei costi e delle risorse effettuata da
 \sezione{Introduzione}
 
 \subsezione{Scopo del documento}
-Il documento si propone di presentare ai Committenti i costi, la distribuzione dei ruoli e delle risorse necessari per la realizzazione del progetto inerente al capitolato d'appalto C04.\\
+Il documento si propone di presentare ai Committenti l'effettivo utilizzo delle risorse richieste per la realizzazione del progetto inerente al capitolato d'appalto C04, confrontandole con quanto stimato ad inizio progetto.\\
 
 \newpage
 
@@ -408,6 +409,7 @@ In questa fase il progetto \`e in fase di completamento e ci si aspetta un lavor
 \end{table}
 
 Si pu\`o notare dai dati che in generale \`e stato richiesto un impegno maggiore rispetto a quanto previsto.
+In questa fase finale \`e stato completato lo sviluppo del progetto, sono stati prodotti l'utilit\`a di installazione e il manuale utente (gi\`a iniziato nella scorsa fase). Il resto del tempo e delle risorse residue sono state impiegate nel processo di qualifica.
 
 \newpage
 \sezione{Consuntivo di fine progetto}
@@ -422,24 +424,24 @@ del progetto divise per fase.
 		 \hline
 %%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %			\multicolumn{3}{|c|}{ \multirow{2}{*}{ FASE RQ - RA} } \\
-			\multicolumn{5}{|c|}{ \textbf{Consuntivo Ore/Ruolo divise per fase} } \\
+			\multicolumn{6}{|c|}{ \textbf{Consuntivo Ore/Ruolo divise per fase} } \\
 			\hline
-			 & \multicolumn{3}{|c|}{ \textbf{FASI} } & \\
+			 & \multicolumn{4}{|c|}{ \textbf{FASI} } & \\
 			\hline
-			\textbf{Ruolo} & \textbf{RR-RPP} & \textbf{RPP-RQ} & \textbf{RQ-RA} & \textbf{Totale}\\
+			\textbf{Ruolo} & \textbf{RR-RPP} & \textbf{RPP-RQ} & \textbf{RQ-RA} & \textbf{Totale} & \textbf{Scostamento}\\
 			\hline
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-			Responsabile 		&  18  &  31  &  10  &  59 \\ % R4
+			Responsabile 		&  18  &  31  &  10  &  59  & -7\\ % R4
 			\hline
-			Amministratore 		&  44  &  42  &  13 &  99\\ % R5
+			Amministratore 		&  44  &  42  &  13 &  99 & -12\\ % R5
 			\hline
-			Analista   	&  86  &  12 &  0  &  98\\ % R2
+			Analista   	&  86  &  12 &  0  &  98 & 0\\ % R2
 			\hline
-			Progettista   	&  39  &  82  &  11  &  132\\ % R1
+			Progettista   	&  39  &  82  &  11  &  132 & -20\\ % R1
 			\hline
-			Programmatore    &  0  &  103 &  17  &  120\\ % R6
+			Programmatore    &  0  &  103 &  17  &  120 & +13\\ % R6
 			\hline
-			Verificatore   	&  28  &  97  &  26  &  151\\ % R7
+			Verificatore   	&  28  &  97  &  26  &  151 & -8\\ % R7
 			\hline		
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\end{tabular}
@@ -473,6 +475,7 @@ del progetto divise per fase.
         \hline
         \textbf{Totale} & \textbf{659} & \textbf{13440}\\
 		\hline
+		\textbf{Scostamento} & \textbf{-10} & \textbf{-330} \\	\hline
 		\end{tabular}
 	\caption{Consuntivo Totale} 
 	\label{tab:cons_Totale}
